--- a/files/project.css
+++ b/files/project.css
@@ -102,6 +102,7 @@ div#titleimage {
     text-align: center;
 }
 div#aboutproject {
+    height: auto;
     margin-left: auto;
     margin-right: auto;
     width: device-width;
@@ -183,7 +184,7 @@ div.projectstep {
     border-bottom-style: dotted;
     padding: 5px;
     margin: auto;
-    height: 200px;
+    min-height: 200px;
     width: 800px;
     max-width: 85%
 }
